@@ -5,7 +5,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.IntNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
-import com.google.common.collect.ImmutableSet;
+import com.fasterxml.jackson.databind.node.TextNode;
 import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.Banner;
 import com.iab.openrtb.request.BidRequest;
@@ -70,6 +70,8 @@ import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.log.ConditionalLogger;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtApp;
+import org.prebid.server.proto.openrtb.ext.request.ExtDeal;
+import org.prebid.server.proto.openrtb.ext.request.ExtDealLine;
 import org.prebid.server.proto.openrtb.ext.request.ExtDevice;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpContext;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpContextDataAdserver;
@@ -89,7 +91,9 @@ import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtUserTpIdRubicon;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.RubiconVideoParams;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebid;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
+import org.prebid.server.util.ObjectUtil;
 
 import java.math.BigDecimal;
 import java.net.URISyntaxException;
@@ -111,9 +115,6 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
-/**
- * <a href="https://rubiconproject.com">Rubicon Project</a> {@link Bidder} implementation.
- */
 public class RubiconBidder implements Bidder<BidRequest> {
 
     private static final Logger logger = LoggerFactory.getLogger(RubiconBidder.class);
@@ -126,7 +127,9 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String ADSERVER_EID = "adserver.org";
     private static final String LIVEINTENT_EID = "liveintent.com";
     private static final String LIVERAMP_EID = "liveramp.com";
+    private static final String SOURCE_RUBICON = "rubiconproject.com";
 
+    private static final String FPD_GPID_FIELD = "gpid";
     private static final String FPD_SECTIONCAT_FIELD = "sectioncat";
     private static final String FPD_PAGECAT_FIELD = "pagecat";
     private static final String FPD_PAGE_FIELD = "page";
@@ -134,25 +137,29 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String FPD_SEARCH_FIELD = "search";
     private static final String FPD_CONTEXT_FIELD = "context";
     private static final String FPD_DATA_FIELD = "data";
+    private static final String FPD_DATA_PBADSLOT_FIELD = "pbadslot";
     private static final String FPD_ADSERVER_FIELD = "adserver";
     private static final String FPD_ADSERVER_NAME_GAM = "gam";
     private static final String FPD_KEYWORDS_FIELD = "keywords";
+    private static final String DFP_ADUNIT_CODE_FIELD = "dfp_ad_unit_code";
     private static final String PREBID_EXT = "prebid";
 
     private static final String PPUID_STYPE = "ppuid";
+    private static final String OTHER_STYPE = "other";
     private static final String SHA256EMAIL_STYPE = "sha256email";
     private static final String DMP_STYPE = "dmp";
     private static final String XAPI_CURRENCY = "USD";
-    private static final Set<Integer> USER_SEGTAXES = ImmutableSet.of(4);
-    private static final Set<Integer> SITE_SEGTAXES = ImmutableSet.of(1, 2, 5, 6);
+
+    private static final Set<Integer> USER_SEGTAXES = Set.of(4);
+    private static final Set<Integer> SITE_SEGTAXES = Set.of(1, 2, 5, 6);
 
     private static final Set<String> STYPE_TO_REMOVE = new HashSet<>(Arrays.asList(PPUID_STYPE, SHA256EMAIL_STYPE,
             DMP_STYPE));
     private static final TypeReference<ExtPrebid<ExtImpPrebid, ExtImpRubicon>> RUBICON_EXT_TYPE_REFERENCE =
-            new TypeReference<ExtPrebid<ExtImpPrebid, ExtImpRubicon>>() {
+            new TypeReference<>() {
             };
     private static final TypeReference<ExtPrebid<ExtBidPrebid, ObjectNode>> EXT_PREBID_TYPE_REFERENCE =
-            new TypeReference<ExtPrebid<ExtBidPrebid, ObjectNode>>() {
+            new TypeReference<>() {
             };
     private static final int PORTRAIT_MOBILE_SIZE_ID = 67;
     private static final int LANDSCAPE_MOBILE_SIZE_ID = 101;
@@ -174,12 +181,12 @@ public class RubiconBidder implements Bidder<BidRequest> {
                          JacksonMapper mapper) {
 
         this.endpointUrl = HttpUtil.validateUrl(Objects.requireNonNull(endpoint));
-        this.supportedVendors = new HashSet<>(supportedVendors);
+        this.supportedVendors = Set.copyOf(Objects.requireNonNull(supportedVendors));
         this.generateBidId = generateBidId;
         this.currencyConversionService = Objects.requireNonNull(currencyConversionService);
         this.mapper = Objects.requireNonNull(mapper);
 
-        this.headers = headers(Objects.requireNonNull(xapiUsername), Objects.requireNonNull(xapiPassword));
+        headers = headers(Objects.requireNonNull(xapiUsername), Objects.requireNonNull(xapiPassword));
     }
 
     @Override
@@ -189,28 +196,25 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
         final List<Imp> imps = extractValidImps(bidRequest, errors);
         if (CollectionUtils.isEmpty(imps)) {
-            errors.add(BidderError.of("There are no valid impressions to create bid request to rubicon bidder",
-                    BidderError.Type.bad_input));
-            return Result.of(Collections.emptyList(), errors);
+            errors.add(BidderError.badInput("There are no valid impressions to create bid request to rubicon bidder"));
+            return Result.withErrors(errors);
         }
-        final Map<Imp, ExtPrebid<ExtImpPrebid, ExtImpRubicon>> impToImpExt =
-                parseRubiconImpExts(imps, errors);
+
+        final Map<Imp, ExtPrebid<ExtImpPrebid, ExtImpRubicon>> impToImpExt = parseRubiconImpExts(imps, errors);
         final String impLanguage = firstImpExtLanguage(impToImpExt.values());
+        final String uri = makeUri(bidRequest);
 
         for (Map.Entry<Imp, ExtPrebid<ExtImpPrebid, ExtImpRubicon>> impToExt : impToImpExt.entrySet()) {
             try {
                 final Imp imp = impToExt.getKey();
                 final ExtPrebid<ExtImpPrebid, ExtImpRubicon> ext = impToExt.getValue();
-                final BidRequest singleRequest = createSingleRequest(
+                final BidRequest singleImpRequest = createSingleRequest(
                         imp, ext.getPrebid(), ext.getBidder(), bidRequest, impLanguage, errors);
-                final String body = mapper.encode(singleRequest);
-                httpRequests.add(HttpRequest.<BidRequest>builder()
-                        .method(HttpMethod.POST)
-                        .uri(makeUri(bidRequest))
-                        .body(body)
-                        .headers(headers)
-                        .payload(singleRequest)
-                        .build());
+                if (hasDeals(imp)) {
+                    httpRequests.addAll(createDealsRequests(singleImpRequest, uri));
+                } else {
+                    httpRequests.add(createHttpRequest(singleImpRequest, uri));
+                }
             } catch (PreBidException e) {
                 errors.add(BidderError.badInput(e.getMessage()));
             }
@@ -267,9 +271,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
     private BidderError impTypeErrorMessage(Imp imp) {
         final BidType type = resolveExpectedBidType(imp);
-        return BidderError.of(
-                String.format("Impression with id %s rejected with invalid type `%s`." + " Allowed types are banner and"
-                        + " video.", imp.getId(), type != null ? type.name() : "unknown"), BidderError.Type.bad_input);
+        return BidderError.badInput(String.format("Impression with id %s rejected with invalid type `%s`."
+                + " Allowed types are banner and video.", imp.getId(), type != null ? type.name() : "unknown"));
     }
 
     private static BidType resolveExpectedBidType(Imp imp) {
@@ -460,7 +463,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
     private static BigDecimal resolveBidFloorPrice(Imp imp) {
         final BigDecimal bidFloor = imp.getBidfloor();
-        return bidFloor != null && bidFloor.compareTo(BigDecimal.ZERO) > 0 ? bidFloor : null;
+        return BidderUtil.isValidPrice(bidFloor) ? bidFloor : null;
     }
 
     private static String resolveBidFloorCurrency(Imp imp, BidRequest bidRequest, List<BidderError> errors) {
@@ -505,6 +508,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                                      Site site,
                                      App app,
                                      ExtRequest extRequest) {
+
         final ExtImpContext context = extImpContext(imp);
         return RubiconImpExt.of(
                 RubiconImpExtRp.of(
@@ -513,7 +517,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                         RubiconImpExtRpTrack.of("", "")),
                 mapVendorsNamesToUrls(imp.getMetric()),
                 getMaxBids(extRequest),
-                getAdSlot(imp, context));
+                getGpid(imp.getExt()));
     }
 
     private JsonNode makeTarget(Imp imp, ExtImpRubicon rubiconImpExt, Site site, App app, ExtImpContext context) {
@@ -576,7 +580,6 @@ public class RubiconBidder implements Bidder<BidRequest> {
                                             ExtImpRubicon rubiconImpExt,
                                             ExtImpContext context,
                                             ObjectNode result) {
-        final JsonNode data = imp.getExt().get(FPD_DATA_FIELD);
 
         mergeFirstPartyDataFromData(imp, context, result);
         mergeFirstPartyDataKeywords(imp, context, result);
@@ -591,22 +594,36 @@ public class RubiconBidder implements Bidder<BidRequest> {
         // merge OPENRTB.imp[].ext.data.search to XAPI.imp[].ext.rp.target.search
         mergeStringAttributeIntoArray(
                 result,
-                data,
+                imp.getExt().get(FPD_DATA_FIELD),
                 node -> getTextValueFromNodeByPath(node, FPD_SEARCH_FIELD),
                 FPD_SEARCH_FIELD);
     }
 
     private void mergeFirstPartyDataFromData(Imp imp, ExtImpContext context, ObjectNode result) {
+        final ObjectNode contextDataNode = toObjectNode(
+                ObjectUtil.getIfNotNull(context, ExtImpContext::getData));
         // merge OPENRTB.imp[].ext.context.data.* to XAPI.imp[].ext.rp.target.*
-        final ObjectNode contextDataNode = context != null ? context.getData() : null;
-        if (contextDataNode != null) {
-            populateFirstPartyDataAttributes(contextDataNode, result);
-        }
+        populateFirstPartyDataAttributes(contextDataNode, result);
 
+        final ObjectNode dataNode = toObjectNode(imp.getExt().get(FPD_DATA_FIELD));
         // merge OPENRTB.imp[].ext.data.* to XAPI.imp[].ext.rp.target.*
-        final JsonNode dataNode = imp.getExt().get(FPD_DATA_FIELD);
-        if (dataNode != null && dataNode.isObject()) {
-            populateFirstPartyDataAttributes((ObjectNode) dataNode, result);
+        populateFirstPartyDataAttributes(dataNode, result);
+
+        // override XAPI.imp[].ext.rp.target.* with OPENRTB.imp[].ext.data.*
+        overrideFirstPartyDataAttributes(contextDataNode, dataNode, result);
+    }
+
+    private void overrideFirstPartyDataAttributes(ObjectNode contextDataNode, ObjectNode dataNode, ObjectNode result) {
+        final JsonNode pbadslotNode = dataNode.get(FPD_DATA_PBADSLOT_FIELD);
+        if (pbadslotNode != null && pbadslotNode.isTextual()) {
+            // copy imp[].ext.data.pbadslot to XAPI.imp[].ext.rp.target.pbadslot
+            result.set(FPD_DATA_PBADSLOT_FIELD, pbadslotNode);
+        } else {
+            // copy adserver.adslot value to XAPI field imp[].ext.rp.target.dfp_ad_unit_code
+            final String resolvedDfpAdUnitCode = getAdSlot(contextDataNode, dataNode);
+            if (resolvedDfpAdUnitCode != null) {
+                result.set(DFP_ADUNIT_CODE_FIELD, TextNode.valueOf(resolvedDfpAdUnitCode));
+            }
         }
     }
 
@@ -744,10 +761,19 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return multibidMaxBids != null ? multibidMaxBids : 1;
     }
 
+    private String getGpid(ObjectNode impExt) {
+        final JsonNode gpidNode = impExt.get(FPD_GPID_FIELD);
+        return gpidNode != null && gpidNode.isTextual() ? gpidNode.asText() : null;
+    }
+
     private String getAdSlot(Imp imp, ExtImpContext context) {
         final ObjectNode contextDataNode = context != null ? context.getData() : null;
-        final JsonNode dataNode = imp.getExt().get(FPD_DATA_FIELD);
+        final ObjectNode dataNode = toObjectNode(imp.getExt().get(FPD_DATA_FIELD));
 
+        return getAdSlot(contextDataNode, dataNode);
+    }
+
+    private String getAdSlot(ObjectNode contextDataNode, ObjectNode dataNode) {
         return ObjectUtils.firstNonNull(
                 // or imp[].ext.context.data.adserver.adslot
                 getAdSlotFromAdServer(contextDataNode),
@@ -912,6 +938,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final ExtUser extUser = user != null ? user.getExt() : null;
         final String resolvedId = userId == null ? resolveUserId(extUser) : null;
         final List<ExtUserEid> extUserEids = extUser != null ? extUser.getEids() : null;
+        final String userBuyeruid = user != null ? user.getBuyeruid() : null;
+        final String resolvedBuyeruid = userBuyeruid != null ? userBuyeruid : resolveBuyeruidFromEids(extUserEids);
         final Map<String, List<ExtUserEid>> sourceToUserEidExt = extUser != null
                 ? specialExtUserEids(extUserEids)
                 : null;
@@ -926,8 +954,13 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final ObjectNode userExtData = extUser != null ? extUser.getData() : null;
         final String liverampId = extractLiverampId(sourceToUserEidExt);
 
-        if (userExtRp == null && userExtTpIds == null && userExtData == null && liverampId == null
-                && resolvedId == null && !hasStypeToRemove) {
+        if (userExtRp == null
+                && userExtTpIds == null
+                && userExtData == null
+                && liverampId == null
+                && resolvedId == null
+                && Objects.equals(userBuyeruid, resolvedBuyeruid)
+                && !hasStypeToRemove) {
             return user;
         }
 
@@ -949,6 +982,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
         return userBuilder
                 .id(ObjectUtils.defaultIfNull(resolvedId, userId))
+                .buyeruid(resolvedBuyeruid)
                 .gender(null)
                 .yob(null)
                 .geo(null)
@@ -1013,6 +1047,28 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 ? extUserEidUid
                 : ExtUserEidUid.of(extUserEidUid.getId(), extUserEidUid.getAtype(),
                 ExtUserEidUidExt.of(extUserEidUidExt.getRtiPartner(), null));
+    }
+
+    private static String resolveBuyeruidFromEids(List<ExtUserEid> eids) {
+        return CollectionUtils.emptyIfNull(eids).stream()
+                .filter(Objects::nonNull)
+                .filter(eid -> SOURCE_RUBICON.equals(eid.getSource()))
+                .map(ExtUserEid::getUids)
+                .filter(Objects::nonNull)
+                .flatMap(Collection::stream)
+                .filter(Objects::nonNull)
+                .filter(RubiconBidder::validateExtUserEidUidForUserBuyeruid)
+                .map(ExtUserEidUid::getId)
+                .findFirst()
+                .orElse(null);
+
+    }
+
+    private static boolean validateExtUserEidUidForUserBuyeruid(ExtUserEidUid uid) {
+        final ExtUserEidUidExt uidExt = ObjectUtil.getIfNotNull(uid, ExtUserEidUid::getExt);
+        final String uidExtStype = ObjectUtil.getIfNotNull(uidExt, ExtUserEidUidExt::getStype);
+
+        return StringUtils.equalsAny(uidExtStype, PPUID_STYPE, OTHER_STYPE);
     }
 
     private static Map<String, List<ExtUserEid>> specialExtUserEids(List<ExtUserEid> eids) {
@@ -1253,6 +1309,64 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return source;
     }
 
+    private HttpRequest<BidRequest> createHttpRequest(BidRequest bidRequest, String uri) {
+        return HttpRequest.<BidRequest>builder()
+                .method(HttpMethod.POST)
+                .uri(uri)
+                .body(mapper.encodeToBytes(bidRequest))
+                .headers(headers)
+                .payload(bidRequest)
+                .build();
+    }
+
+    private static boolean hasDeals(Imp imp) {
+        return imp.getPmp() != null && CollectionUtils.isNotEmpty(imp.getPmp().getDeals());
+    }
+
+    private List<HttpRequest<BidRequest>> createDealsRequests(BidRequest bidRequest, String uri) {
+        final Imp singleImp = bidRequest.getImp().get(0);
+        return singleImp.getPmp().getDeals().stream()
+                .map(deal -> mapper.mapper().convertValue(deal.getExt(), ExtDeal.class))
+                .filter(Objects::nonNull)
+                .map(ExtDeal::getLine)
+                .filter(Objects::nonNull)
+                .map(lineItem -> createLineItemBidRequest(lineItem, bidRequest, singleImp))
+                .map((BidRequest request) -> createHttpRequest(request, uri))
+                .collect(Collectors.toList());
+    }
+
+    private BidRequest createLineItemBidRequest(ExtDealLine lineItem, BidRequest bidRequest, Imp imp) {
+        final Imp dealsImp = imp.toBuilder()
+                .banner(modifyBanner(imp.getBanner(), lineItem.getSizes()))
+                .ext(modifyRubiconImpExt(imp.getExt(), bidRequest.getExt(), lineItem.getExtLineItemId(),
+                        getAdSlot(imp, extImpContext(imp))))
+                .build();
+
+        return bidRequest.toBuilder()
+                .imp(Collections.singletonList(dealsImp))
+                .build();
+    }
+
+    private static Banner modifyBanner(Banner banner, List<Format> sizes) {
+        return CollectionUtils.isEmpty(sizes) || banner == null ? banner : banner.toBuilder().format(sizes).build();
+    }
+
+    private ObjectNode modifyRubiconImpExt(ObjectNode impExtNode, ExtRequest extRequest, String extLineItemId,
+                                           String adSlot) {
+        final RubiconImpExt rubiconImpExt = mapper.mapper().convertValue(impExtNode, RubiconImpExt.class);
+        final RubiconImpExtRp impExtRp = rubiconImpExt.getRp();
+
+        final ObjectNode targetNode = impExtRp.getTarget() == null || impExtRp.getTarget().isNull()
+                ? mapper.mapper().createObjectNode() : (ObjectNode) impExtRp.getTarget();
+
+        final ObjectNode modifiedTargetNode = targetNode.put("line_item", extLineItemId);
+        final RubiconImpExtRp modifiedImpExtRp = RubiconImpExtRp.of(impExtRp.getZoneId(), modifiedTargetNode,
+                impExtRp.getTrack());
+
+        return mapper.mapper().valueToTree(RubiconImpExt.of(modifiedImpExtRp, rubiconImpExt.getViewabilityvendors(),
+                getMaxBids(extRequest), adSlot));
+    }
+
     private List<BidderBid> extractBids(BidRequest prebidRequest,
                                         BidRequest bidRequest,
                                         RubiconBidResponse bidResponse,
@@ -1367,5 +1481,11 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
     private static BidType bidType(BidRequest bidRequest) {
         return isVideo(bidRequest.getImp().get(0)) ? BidType.video : BidType.banner;
+    }
+
+    private ObjectNode toObjectNode(JsonNode node) {
+        return node != null && node.isObject()
+                ? (ObjectNode) node
+                : mapper.mapper().createObjectNode();
     }
 }
