@@ -1,30 +1,29 @@
 package org.prebid.server.settings.model;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import lombok.Value;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 @Value(staticConstructor = "of")
 public class AccountAnalyticsConfig {
 
-    private static final AccountAnalyticsConfig FALLBACK;
+    private static final Map<String, Boolean> FALLBACK_AUCTION_EVENTS;
 
     static {
-        final Map<String, Boolean> events = new HashMap<>();
-        events.put("web", false);
-        events.put("amp", true);
-        events.put("app", true);
-
-        FALLBACK = AccountAnalyticsConfig.of(Collections.unmodifiableMap(events));
+        FALLBACK_AUCTION_EVENTS = Map.of(
+                "web", false,
+                "amp", true,
+                "app", true);
     }
 
     @JsonProperty("auction-events")
     Map<String, Boolean> auctionEvents;
 
-    public static AccountAnalyticsConfig fallback() {
-        return FALLBACK;
+    Map<String, ObjectNode> modules;
+
+    public static Map<String, Boolean> fallbackAuctionEvents() {
+        return FALLBACK_AUCTION_EVENTS;
     }
 }
